<resources>

    <string name="app_name">Prayer Requests</string>
    <string name="text_enter_request">Request details</string>
    <string name="message_alert">Would you like to delete the following prayer request:\n
        %2$s\n?\n\n(Note: this is one of %1$d existing requests)
    </string>
    <string name="button_no">No</string>
    <string name="button_yes">Yes</string>
    <string name="button_ok">OK</string>
    <string name="button_sort">Sort</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="text_requester">Requester</string>
    <string name="text_request_summary">Request summary</string>
    <string name="text_date">Date of request %s</string>
    <string name="text_less"><u>less</u></string>
    <string name="text_more"><u>more</u></string>
    <string name="button_back">Prayer request:</string>
    <string name="item_sorting">Sorting</string>
    <string name="item_save">Save</string>
    <string name="item_prayer_mode">Prayer mode</string>
    <string name="title_sort_by">Sort by</string>
    <string name="title_prayer_request">Would you like to save your request?</string>
    <string name="radio_button_sorting_by_requester">requester</string>
    <string name="radio_button_sorting_by_date_ascending">date ascending</string>
    <string name="radio_button_sorting_by_date_descending">date descending</string>
    <string name="radio_button_sorting_by_favorites">by favourites</string>
    <string name="filtration_by_favorites">filtration</string>
    <string name="prayer_mode_activity_name">Prayer Mode</string>

</resources>