<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <RadioButton
        android:id="@+id/radio_button_sorting_by_requester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_button_sorting_by_requester"/>

    <RadioButton
        android:id="@+id/radio_button_sorting_by_date_ascending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_button_sorting_by_date_ascending"/>

    <RadioButton
        android:id="@+id/radio_button_sorting_by_date_descending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_button_sorting_by_date_descending"/>

</RadioGroup>